--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
       <img src="images/log-cabin.jpg">
-        <h1>MMP100 - Simple choose your own adventure game</h1>
+        <h1>MMP100 - Simple choose your own adventure game on GitHub</h1>
         <h2>Use this as your guide to create your own adventure project.</h2>
         
         <p>This is the text that will describe your adventure.</p>
